Fix overflow and reposition search icon

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,8 +118,8 @@ body.light .mode__control .far {
 
 .search__icon {
   position: absolute;
-  top: 0.90rem;
-  left: 1.2rem;
+  top: 1.69rem;
+  left: 1.5rem;
   color: var(--clr-neutral--100);
 }
 
